--- a/SPA/SPA.vcxproj.filters
+++ b/SPA/SPA.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\source\sqlite3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\SQLiteWrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Database.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\source\sqlite3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\SQLiteWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
