--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{h,cpp}]
+[*.{h,cpp,hpp}]
 charset = utf-8
 indent_style = space
 indent_size = 4
