--- a/SPA/SPA.vcxproj
+++ b/SPA/SPA.vcxproj
@@ -15,7 +15,6 @@
     <ClCompile Include="..\source\SourceProcessor.cpp" />
     <ClCompile Include="..\source\Database.cpp" />
     <ClCompile Include="..\source\sqlite3.c" />
-    <ClCompile Include="..\source\SQLiteWrapper.cpp" />
     <ClCompile Include="..\source\Tokenizer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -24,6 +23,7 @@
     <ClInclude Include="..\source\SourceProcessor.h" />
     <ClInclude Include="..\source\sqlite3.h" />
     <ClInclude Include="..\source\SQLiteWrapper.h" />
+    <ClInclude Include="..\source\SQLiteWrapper.hpp" />
     <ClInclude Include="..\source\Tokenizer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
