--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
+[*.{md}]
+indent_style = space
+indent_size = 2
+
 [*.{h,cpp,hpp}]
 charset = utf-8
 indent_style = space
