--- a/SPA/SPA.vcxproj.filters
+++ b/SPA/SPA.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\source\AST\PQL\SuchThatClause.cpp">
       <Filter>Source Files\AST\PQL</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\PQLParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\Database.h">
@@ -100,6 +103,9 @@
     </ClInclude>
     <ClInclude Include="..\source\AST\PQL\SelectClause.h">
       <Filter>Header Files\AST\PQL</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\PQLParser.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
