--- a/UnitTesting/UnitTesting.vcxproj.filters
+++ b/UnitTesting/UnitTesting.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="TestHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestPQLParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
