--- a/SPA/SPA.vcxproj
+++ b/SPA/SPA.vcxproj
@@ -17,6 +17,10 @@
     <ClCompile Include="..\source\AST\PQL\PatternClause.cpp" />
     <ClCompile Include="..\source\AST\PQL\SelectClause.cpp" />
     <ClCompile Include="..\source\AST\PQL\SuchThatClause.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\ExpNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\Program.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\ProgramParser.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\StatementNode.cpp" />
     <ClCompile Include="..\source\PQL2SQLTransformer.cpp" />
     <ClCompile Include="..\source\PQLParser.cpp" />
     <ClCompile Include="..\source\QueryProcessor.cpp" />
@@ -32,6 +36,10 @@
     <ClInclude Include="..\source\AST\PQL\PatternClause.h" />
     <ClInclude Include="..\source\AST\PQL\SelectClause.h" />
     <ClInclude Include="..\source\AST\PQL\SuchThatClause.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\ExpNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\Program.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\ProgramParser.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\StatementNode.h" />
     <ClInclude Include="..\source\Database.h" />
     <ClInclude Include="..\source\PQL2SQLTransformer.h" />
     <ClInclude Include="..\source\PQLParser.h" />
