--- a/UnitTesting/UnitTesting.vcxproj.filters
+++ b/UnitTesting/UnitTesting.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="TestPQL2SQLTransformer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestExpressionParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
