--- a/UnitTesting/UnitTesting.vcxproj
+++ b/UnitTesting/UnitTesting.vcxproj
@@ -171,6 +171,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestDatabase.cpp" />
+    <ClCompile Include="TestExpressionParser.cpp" />
     <ClCompile Include="TestHelper.cpp" />
     <ClCompile Include="TestPQL2SQLTransformer.cpp" />
     <ClCompile Include="TestPQLParser.cpp" />
