Add the SPA example tests

--- a/UnitTesting/UnitTesting.vcxproj.filters
+++ b/UnitTesting/UnitTesting.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="TestExpressionParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestSPA.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
