--- a/SPA/SPA.vcxproj
+++ b/SPA/SPA.vcxproj
@@ -26,12 +26,20 @@
     <ClCompile Include="..\source\AST\PQL\PatternClause.cpp" />
     <ClCompile Include="..\source\AST\PQL\SelectClause.cpp" />
     <ClCompile Include="..\source\AST\PQL\SuchThatClause.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\AssignNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\CallNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\ConExpNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\IfNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\PrintNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\ProcedureNode.cpp" />
     <ClCompile Include="..\source\AST\SIMPLE\Program.cpp" />
-    <ClCompile Include="..\source\AST\SIMPLE\ProgramParser.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\ReadNode.cpp" />
     <ClCompile Include="..\source\AST\SIMPLE\StatementNode.cpp" />
+    <ClCompile Include="..\source\AST\SIMPLE\WhileNode.cpp" />
     <ClCompile Include="..\source\ExpressionParser.cpp" />
     <ClCompile Include="..\source\PQL2SQLTransformer.cpp" />
     <ClCompile Include="..\source\PQLParser.cpp" />
+    <ClCompile Include="..\source\ProgramParser.cpp" />
     <ClCompile Include="..\source\QueryProcessor.cpp" />
     <ClCompile Include="..\source\SourceProcessor.cpp" />
     <ClCompile Include="..\source\Database.cpp" />
@@ -54,13 +62,21 @@
     <ClInclude Include="..\source\AST\PQL\PatternClause.h" />
     <ClInclude Include="..\source\AST\PQL\SelectClause.h" />
     <ClInclude Include="..\source\AST\PQL\SuchThatClause.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\AssignNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\CallNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\ConExpNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\IfNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\PrintNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\ProcedureNode.h" />
     <ClInclude Include="..\source\AST\SIMPLE\Program.h" />
-    <ClInclude Include="..\source\AST\SIMPLE\ProgramParser.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\ReadNode.h" />
     <ClInclude Include="..\source\AST\SIMPLE\StatementNode.h" />
+    <ClInclude Include="..\source\AST\SIMPLE\WhileNode.h" />
     <ClInclude Include="..\source\Database.h" />
     <ClInclude Include="..\source\ExpressionParser.h" />
     <ClInclude Include="..\source\PQL2SQLTransformer.h" />
     <ClInclude Include="..\source\PQLParser.h" />
+    <ClInclude Include="..\source\ProgramParser.h" />
     <ClInclude Include="..\source\QueryProcessor.h" />
     <ClInclude Include="..\source\SourceProcessor.h" />
     <ClInclude Include="..\source\sqlite3.h" />
