--- a/SPA/SPA.vcxproj.filters
+++ b/SPA/SPA.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClCompile Include="..\source\PQL2SQLTransformer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\AST\SIMPLE\ProgramParser.cpp">
-      <Filter>Source Files\AST\SIMPLE</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\AST\SIMPLE\Program.cpp">
       <Filter>Source Files\AST\SIMPLE</Filter>
     </ClCompile>
@@ -116,6 +113,33 @@
     </ClCompile>
     <ClCompile Include="..\source\ExpressionParser.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\ReadNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\PrintNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\WhileNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\IfNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\CallNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\AssignNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\ConExpNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ProgramParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\AST\SIMPLE\ProcedureNode.cpp">
+      <Filter>Source Files\AST\SIMPLE</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,9 +194,6 @@
     <ClInclude Include="..\source\AST\SIMPLE\StatementNode.h">
       <Filter>Header Files\AST\SIMPLE</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\AST\SIMPLE\ProgramParser.h">
-      <Filter>Header Files\AST\SIMPLE</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\AST\Expression\BinaryExpression.h">
       <Filter>Header Files\AST\Expression</Filter>
     </ClInclude>
@@ -202,6 +223,33 @@
     </ClInclude>
     <ClInclude Include="..\source\ExpressionParser.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\ReadNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\PrintNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\WhileNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\IfNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\CallNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\AssignNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\ConExpNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\ProgramParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\AST\SIMPLE\ProcedureNode.h">
+      <Filter>Header Files\AST\SIMPLE</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
