--- a/UnitTesting/UnitTesting.vcxproj.filters
+++ b/UnitTesting/UnitTesting.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="TestSPA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestProgramParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
